Migrate Crews to Core and remove travel module